@@ -2631,6 +2631,22 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+name|boolean
+name|preserveMulti
+init|=
+name|params
+operator|.
+name|getFieldBool
+argument_list|(
+name|fieldName
+argument_list|,
+name|HighlightParams
+operator|.
+name|PRESERVE_MULTI
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
 name|String
 index|[]
 name|docTexts
@@ -3004,6 +3020,35 @@ control|)
 block|{
 if|if
 condition|(
+name|preserveMulti
+condition|)
+block|{
+if|if
+condition|(
+name|bestTextFragments
+index|[
+name|k
+index|]
+operator|!=
+literal|null
+condition|)
+block|{
+name|frags
+operator|.
+name|add
+argument_list|(
+name|bestTextFragments
+index|[
+name|k
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
+if|if
+condition|(
 operator|(
 name|bestTextFragments
 index|[
@@ -3039,6 +3084,7 @@ expr_stmt|;
 block|}
 block|}
 block|}
+block|}
 catch|catch
 parameter_list|(
 name|InvalidTokenOffsetsException
@@ -3061,6 +3107,12 @@ throw|;
 block|}
 block|}
 comment|// sort such that the fragments with the highest score come first
+if|if
+condition|(
+operator|!
+name|preserveMulti
+condition|)
+block|{
 name|Collections
 operator|.
 name|sort
@@ -3105,6 +3157,7 @@ block|}
 block|}
 argument_list|)
 expr_stmt|;
+block|}
 comment|// convert fragments back into text
 comment|// TODO: we can include score and position information in output as snippet attributes
 if|if
@@ -3140,6 +3193,32 @@ control|)
 block|{
 if|if
 condition|(
+name|preserveMulti
+condition|)
+block|{
+if|if
+condition|(
+name|fragment
+operator|!=
+literal|null
+condition|)
+block|{
+name|fragTexts
+operator|.
+name|add
+argument_list|(
+name|fragment
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
+if|if
+condition|(
 operator|(
 name|fragment
 operator|!=
@@ -3166,6 +3245,7 @@ name|toString
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 if|if
 condition|(
