@@ -1589,6 +1589,134 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
+DECL|method|testPreserveMulti
+specifier|public
+name|void
+name|testPreserveMulti
+parameter_list|()
+block|{
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|args
+init|=
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"hl"
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"hl.fl"
+argument_list|,
+literal|"cat"
+argument_list|)
+expr_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"hl.snippets"
+argument_list|,
+literal|"2"
+argument_list|)
+expr_stmt|;
+name|args
+operator|.
+name|put
+argument_list|(
+literal|"f.cat.hl.preserveMulti"
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|TestHarness
+operator|.
+name|LocalRequestFactory
+name|sumLRF
+init|=
+name|h
+operator|.
+name|getRequestFactory
+argument_list|(
+literal|"standard"
+argument_list|,
+literal|0
+argument_list|,
+literal|200
+argument_list|,
+name|args
+argument_list|)
+decl_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"cat"
+argument_list|,
+literal|"electronics"
+argument_list|,
+literal|"cat"
+argument_list|,
+literal|"monitor"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"1"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|optimize
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+literal|"Preserve multi"
+argument_list|,
+name|sumLRF
+operator|.
+name|makeRequest
+argument_list|(
+literal|"cat:monitor"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='highlighting']/lst[@name='1']"
+argument_list|,
+literal|"//lst[@name='1']/arr[@name='cat']/str[.=\'electronics\']"
+argument_list|,
+literal|"//lst[@name='1']/arr[@name='cat']/str[.=\'<em>monitor</em>\']"
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testDefaultFieldHighlight
 specifier|public
 name|void
